# sthrottle

./: .gdbinit  Cargo.toml  README.md  config.toml  flake.nix
.cargo/: config.toml
src/: adc_smoothing.rs  axis.rs  button.rs  main.rs  stage.rs
src/filters/: delta_pass.rs  lerp.rs  mean.rs  mod.rs
usbd-human-interface-device-0.4.5/: .cargo_vcs_info.json  .gitignore  .prettierignore  .prettierrc.toml  CODE_OF_CONDUCT.md  Cargo.toml  Cargo.toml.orig  LICENSE  README.md  cspell.config.yaml
usbd-human-interface-device-0.4.5/.github/: dependabot.yml
usbd-human-interface-device-0.4.5/.github/workflows/: audit.yml  example_build.yml  lib_build.yml
usbd-human-interface-device-0.4.5/src/: descriptor.rs  fmt.rs  interface.rs  lib.rs  page.rs  prelude.rs  usb_class.rs
usbd-human-interface-device-0.4.5/src/device/: consumer.rs  fido.rs  joystick.rs  keyboard.rs  mod.rs  mouse.rs
